@@ -84,6 +84,17 @@ TBW
       <version>1.3.0rc1</version>
       <date>2003-05-15</date>
       <notes>
+= Improved performance greatly by doing lazy folding of variables outside
+  trace mode. (Derick)
+= Fixed a bug with "quit", if it was used it disabled the extension for the
+  current process. (Derick)
++ Added the "full" argument to the remote command "backtrace". When this
+  argument is passed, the local variables will be returned to for each frame in
+  the stack. (Derick)
++ Implemented xdebug_time_index() which returns the time passed since the
+  start of the script. This change also changes the output of the tracing
+  functions as the start time will no longer be the first function call, but
+  the real start time of the script. (Derick)
 + Implemented the "show-local" command (shows all local variables in the
   current scope including all contents). (Derick)
 + Implemented conditions for breakpoints in the "break" command. (Derick)
