@@ -1,5 +1,9 @@
 ???, Jul ??, 2003 - xdebug 1.3.0rc1
 
+= Improved performance greatly by doing lazy folding of variables outside
+  trace mode. (Derick)
+= Fixed a bug with "quit", if it was used it disabled the extension for the
+  current process. (Derick)
 + Added the "full" argument to the remote command "backtrace". When this
   argument is passed, the local variables will be returned to for each frame in
   the stack. (Derick)
